...
    let isOwnProfile: Bool
    let isMuted: Bool
    let action: () -> Void

    private var buttonText: String {
        if isOwnProfile {
            return "Edit Profile"
        } else {
            return isMuted ? "Unmute" : "Mute"
        }
    }

    var body: some View {
...
